plugins {
    id 'org.springframework.boot' version "$springBootPluginVersion"
    id 'io.spring.dependency-management' version "$springDependencyVersion"
    id 'java'
    id 'org.sonarqube' version '3.0'
    id 'jacoco'
    id 'checkstyle'
}

group = 'az.kapitalbank.marketplace'
version = "0.0.1-SNAPSHOT"
sourceCompatibility = 11

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

jar {
    enabled = false
}


repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }

    maven {
        url "https://nexus.kblab.local/repository/maven-public"
    }
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
    implementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
    implementation "org.springframework.boot:spring-boot-starter-validation:$springBootVersion"
    implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka'
    implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka-streams'
    implementation "org.springframework.cloud:spring-cloud-starter-bootstrap:$springCloudVersion"
    implementation "org.springframework.cloud:spring-cloud-starter-consul-config:$springCloudVersion"
    implementation "org.springframework.cloud:spring-cloud-starter-vault-config:$springCloudVersion"
    implementation "org.springframework.cloud:spring-cloud-starter-openfeign:$springCloudVersion"
    implementation "org.springframework.kafka:spring-kafka:$kafkaVersion"
    implementation "com.oracle.database.jdbc:ojdbc8:$oracleVersion"
    implementation "io.springfox:springfox-swagger2:$swaggerVersion"
    implementation "io.springfox:springfox-swagger-ui:$swaggerVersion"
    implementation "io.springfox:springfox-bean-validators:$beanValidatorVersion"
    implementation "io.github.openfeign:feign-jackson:$openFeignVersion"
    implementation "io.github.openfeign:feign-annotation-error-decoder:$openFeignVersion"
    implementation "org.mapstruct:mapstruct:$mapStructversion"
    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
    annotationProcessor "org.mapstruct:mapstruct-processor:$mapStructversion"
    compileOnly "org.projectlombok:lombok:$lombokVersion"
    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:$lombokMapstructVersion"
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
    testImplementation "org.mockito:mockito-core:$mockitoVersion"
    testImplementation "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
    testImplementation "org.assertj:assertj-core:$assertJVersion"

}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudDependencyVersion}"
    }
}

test {
    useJUnitPlatform()
}

checkstyle {
    toolVersion = "${checkstyleVersion}"
    configFile = file("qa/checkstyle/checkstyle.xml")
}

checkstyleMain {
    source = 'src/main/java'
}

checkstyleTest {
    source = 'src/test/java'
}

sonarqube {
    properties {
        property "sonar.java.coveragePlugin", "jacoco"
        property "sonar.jacoco.reportPath", "build/jacoco/test.exec"
        property "sonar.junit.reportsPath", "build/test-results/test"
        property "sonar.projectKey", rootProject.name
        property "sonar.host.url", "https://sonarqube.kapitalbank.az"
        property "sonar.scm.forceReloadAll", "true"
        property "sonar.java.checkstyle.reportPaths", "build/reports/checkstyle/main.xml"
        property "sonar.coverage.exclusions", "**/az/kapitalbank/ms/***"
        property "sonar.cpd.exclusions", "**/az/kapitalbank/ms/**"
    }
}
jacoco {
    toolVersion = "0.8.5"
    reportsDir = file("build/reports/jacoco")
}

jacocoTestReport {
    reports {
        xml.enabled true
        csv.enabled false
    }
}



tasks.withType(Checkstyle) {
    reports {
        xml.enabled true
        html.enabled true
    }

}